maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:30: error: ')' expected but '<-' found.
		if (aMurOuest(x+1,y) && x<-getMondeLargeur -1 && v!=9999 && getIndication(x+1,y)>=v && getIndication(x+1,y)<9999) {
                                         ^JediEscaper:30: error: ';' expected but ')' found.
		if (aMurOuest(x+1,y) && x<-getMondeLargeur -1 && v!=9999 && getIndication(x+1,y)>=v && getIndication(x+1,y)<9999) {
                                                                                                                                ^JediEscaper:37: error: '(' expected but identifier found.
      if getIndiction(l,c)!=9999
         ^